TG-68: table elements alignment corrected

--- a/src/Components/Shared/List/list.module.css
+++ b/src/Components/Shared/List/list.module.css
@@ -37,7 +37,9 @@
 
 .td{
   width: 25%;
+  max-width: 180px;
   text-align: center;
+  word-break: break-all;
   padding: 10px;
 }
 
